--- a/src/app/login/dialog-error/dialog-error.component.html
+++ b/src/app/login/dialog-error/dialog-error.component.html
@@ -3,5 +3,12 @@
 <mat-dialog-content> Verifique seu login e/ou senha e tente novamente. </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button id="fechar" mat-raised-button mat-dialog-close color="primary" style="background-color: black;"> Fechar </button>
+    <button 
+    id="fechar" 
+    mat-raised-button 
+    mat-dialog-close 
+    color="primary" 
+    style="background-color: black;"> 
+    Fechar 
+    </button>
 </mat-dialog-actions>
