--- a/src/app/login/dialog-error/dialog-error.component.html
+++ b/src/app/login/dialog-error/dialog-error.component.html
@@ -1,14 +1,14 @@
-<h2 mat-dialog-title> Login e/ou senha incorreta! </h2>
-
-<mat-dialog-content> Verifique seu login e/ou senha e tente novamente. </mat-dialog-content>
-
-<mat-dialog-actions>
-    <button 
-    id="fechar" 
-    mat-raised-button 
-    mat-dialog-close 
-    color="primary" 
-    style="background-color: black;"> 
-    Fechar 
-    </button>
-</mat-dialog-actions>
+<div id="content">
+    <h2 mat-dialog-title> Login ou senha incorreta! </h2>
+    <mat-dialog-content> Verifique seu login ou senha e tente novamente. </mat-dialog-content>
+    <mat-dialog-actions>
+        <button 
+        id="fechar" 
+        mat-raised-button 
+        mat-dialog-close 
+        color="accent">
+        <strong> Fechar </strong>
+        <mat-icon>close</mat-icon>
+        </button>
+    </mat-dialog-actions>
+</div>
